--- a/sass/style-hero.scss
+++ b/sass/style-hero.scss
@@ -9,3 +9,15 @@
     display: flex;
     flex-direction: column;
 }
+
+.yellow--bar {
+    height: 112px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    font-size: 22px;
+    font-weight: 700;
+    background-color: $yellow;
+}
