Styles and dinamic titles for carousels

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,6 +31,7 @@
 <body>
   {% section 'header' %}
   {% section 'hero' %}
+  {% include 'divider' %}
   {% section 'carousel' %}
   {{ content_for_layout }}
   {% section 'footer' %}
