--- a/sass/style-carousel.scss
+++ b/sass/style-carousel.scss
@@ -1,18 +1,21 @@
-.carousel {
+.carousel,
+.carousels {
     position: relative;
     width: 90%;
-    height: 300px;
+    height: 350px;
     margin: 0 auto;
 }
 
-.carousel-content {
+.carousel-content,
+.carousels-content {
     position: relative;
     overflow: hidden;
-    transition: width 0.4s;
+    transition: width .4s;
     height: 100%;
 }
 
-.slide {
+.slide,
+.slides {
     height: 100%;
     position: absolute;
     z-index: 1;
@@ -20,7 +23,41 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+
+    .slide--inner {
+        position: relative;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-family: $work-sans-regular;
+        font-size: 16px;
+        font-weight: 300;
+        text-transform: uppercase;
+        line-height: 26px;
+
+        span:nth-child(4) {
+            color: $gray;
+            text-transform: none;
+        }
+
+        a {
+            text-decoration: none;
+            position: relative;
+
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                height: 2px;
+                width: 100%;
+                background-color: $yellow;
+            }
+        }
+    }
 }
 
 .nav {
@@ -38,11 +75,13 @@
     -webkit-user-select: none;
 }
 
-.nav-left {
+.nav-left,
+.navs-left {
     left: -25px;
 }
 
-.nav-right {
+.nav-right,
+.navs-right {
     right: -25px;
 }
 
@@ -54,4 +93,54 @@
 .carousel-arrow-icon-right {
     margin-left: 7px;
     margin-top: 2px;
+}
+
+// temp carousel section title rules
+
+.fav--icon {
+    position: absolute;
+    right: 20px;
+    top: -20px;
+    display: block;
+    align-self: flex-end;
+    background-image: url(../assets/icon-fav.svg);
+    background-repeat: no-repeat;
+    width: 18px;
+    height: 14px;
+
+    &-solid {
+        background-image: url(../assets/icon-fav-solid.svg);
+    }
+}
+
+.section--title {
+    width: 100%;
+    position: relative;
+    margin: 100px 0 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span {
+        font-family: $work-sans-regular;
+        position: relative;
+        font-size: 22px;
+        font-weight: 300;
+        color: $black;
+        padding: 20px;
+        background-color: $white;
+        text-transform: uppercase;
+        z-index: 1;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 5px;
+        top: 50%;
+        left: 0;
+        background-color: $yellow;
+    }
 }
