--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -2,7 +2,7 @@
     <div class="hero--cta">
         <div class="hero--logo">{{ 'logo-color.png' | asset_url | img_tag }}</div>
         <a class="hero--link" href="#">Beauty and the piste
-            <span>{{ 'yellow-arrow.svg' | asset_url | img_tag }}</span></a>
+            <span>{{ 'icon-yellow-arrow.svg' | asset_url | img_tag }}</span></a>
     </div>
     <img class="hero--img" src="{{settings.hero_img | img_url: '1920x'}}" width="100%">
 </section>
