--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,21 +3,24 @@
 <!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="ie9 no-js"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  
+
   {% if template == 'index' %}
-    <title>{{ shop.name }} | {{ page_title }}</title>
+  <title>{{ shop.name }} | {{ page_title }}</title>
   {% elsif template == '404' %}
-    <title>Page Not Found | {{ shop.name }}</title>
+  <title>Page Not Found | {{ shop.name }}</title>
   {% else %}
-    <title>{{ page_title }} | {{ shop.name }}</title>
+  <title>{{ page_title }} | {{ shop.name }}</title>
   {% endif %}
 
   {% if page_description %}
-    <meta name="description" content="{{ page_description }}" />
+  <meta name="description" content="{{ page_description }}" />
   {% endif %}
 
   {{ content_for_header }}
@@ -28,12 +31,14 @@
   {{ 'styles.scss' | asset_url | stylesheet_tag }}
 
 </head>
+
 <body>
   {% section 'header' %}
   {% section 'hero' %}
   <h1 class="section--title"><span>New in</span></h1>
   {% section 'carousel' %}
   {{ content_for_layout }}
+  {% section "crispcollections" %}
   <h1 class="section--title"><span>Best sellers</span></h1>
   {% section 'bestsellers' %}
   {% section 'footer' %}
@@ -41,12 +46,6 @@
   {{ 'sticky.js' | asset_url | script_tag }}
   {{ 'carousel.js' | asset_url | script_tag }}
   <script src="../assets/carousel.js"></script>
-  <script>
-    function chooseFav() {
-      var favIcon = document.querySelector(".fav--icon");
-      favIcon.classList.toggle("fav--icon-solid");
-      console.log("Kliknuo...!!!")
-    }
-  </script>
 </body>
+
 </html>
