--- a/sections/bestsellers.liquid
+++ b/sections/bestsellers.liquid
@@ -13,7 +13,7 @@
                 <li class="slides" href="{{ product.url }}">
                     <img src="{{ product.featured_image | product_img_url: 'medium' }}" alt="">
                     <div class="slide--inner">
-                        <span class="fav--icon" onclick="chooseFav()"></span>
+                        <span id="icon--favorite" class="icon--fav"></span>
                         <span>{{ product.title }}</span>
                         <span>{{ product.price | money }}</span>
                         {% if product.tags != blank %}
@@ -39,6 +39,7 @@
 </section>
 
 {% javascript %}
+
 
 var carousels = document.querySelector('.carousels');
 var carouselsContent = document.querySelector('.carousels-content');
