Instagram section added to page

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -41,6 +41,7 @@
   {% section "crispcollections" %}
   <h1 class="section--title"><span>Best sellers</span></h1>
   {% section 'bestsellers' %}
+  {% section "instagram" %}
   {% section 'footer' %}
 
   {{ 'sticky.js' | asset_url | script_tag }}
