--- a/sass/style-instagram.scss
+++ b/sass/style-instagram.scss
@@ -1,44 +1,64 @@
-.collection--list {
-    list-style: none;
+.instagram--feed {
     padding: 0;
+    margin: 0 0 50px;
+}
+
+.instagram--list {
+    padding: 0;
+    list-style: none;
     margin: 100px auto;
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     position: relative;
 
-    &--item {
-        width: 33.33%;
-        padding: 10px;
-        position: relative;
+    .instagram--hash-tag {
         text-align: center;
+        position: absolute;
+        font-size: 47px;
+        font-weight: 400;
+        font-family: $work-sans-regular;
+        color: $black;
+        width: 250px;
+        height: 60px;
+        background-color: $yellow;
+        top: calc(50% - 30px);
+        left: calc(50% - 125px);
+        z-index: 1;
 
         @include breakpoint(xs) {
-            width: 100%;
+            top: -30px;
+        }
+    }
+
+    &--item {
+        width: 16.66%;
+        position: relative;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @include breakpoint(xs) {
+            width: 50%;
         }
 
         @include breakpoint(sm) {
-            width: 50%;
+            width: 33.33%;
         }
 
         @include breakpoint(md) {
-            width: 50%;
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
+            width: 25%;
         }
 
         &::after {
             content: "";
             position: absolute;
-            margin: 10px;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: rgba(0, 0, 0, 0.25);
+            background-color: rgba(0, 0, 0, 0);
             transition: all ease-in 0.3s;
         }
 
@@ -46,34 +66,26 @@
             background-color: rgba(226, 255, 4, 0.8);
             transition: all ease-in 0.3s;
         }
-    }
 
-    .collection--title {
-        position: absolute;
-        margin: auto;
-        z-index: 1;
-        top: calc(50% - 50px);
-        width: calc(100% - 20px);
-        text-align: center;
-        font-size: 50px;
-        font-weight: 400;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: $white;
-        font-family: $work-sans-regular;
+        &:hover {
+            
+            .instagram--title-link {
+                display: inline-block;
+            }
+        }
 
-        &-link {
+        .instagram--title-link {
+            position: absolute;
             font-size: 16px;
             font-weight: 300;
             text-transform: uppercase;
             color: $white;
             font-family: $work-sans-regular;
             text-decoration: none;
-            position: relative;
-            display: inline-block;
             padding: 6px;
+            display: none;
+            transition: all ease-in 0.3s;
+            z-index: 1;
 
             &::after {
                 content: "";
