--- a/sass/style-collections.scss
+++ b/sass/style-collections.scss
@@ -62,14 +62,14 @@
         align-items: center;
         justify-content: center;
         color: $white;
-        font-family: $work-sans-regular;
+        font-family: $work-sans;
 
         &-link {
             font-size: 16px;
             font-weight: 300;
             text-transform: uppercase;
             color: $white;
-            font-family: $work-sans-regular;
+            font-family: $work-sans;
             text-decoration: none;
             position: relative;
             display: inline-block;
