--- a/sass/style-instagram.scss
+++ b/sass/style-instagram.scss
@@ -17,7 +17,7 @@
         position: absolute;
         font-size: 47px;
         font-weight: 400;
-        font-family: $work-sans-regular;
+        font-family: $work-sans;
         color: $black;
         width: 250px;
         height: 60px;
@@ -80,7 +80,7 @@
             font-weight: 300;
             text-transform: uppercase;
             color: $white;
-            font-family: $work-sans-regular;
+            font-family: $work-sans;
             text-decoration: none;
             padding: 6px;
             display: none;
