--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -46,7 +46,21 @@
 
   {{ 'sticky.js' | asset_url | script_tag }}
   {{ 'carousel.js' | asset_url | script_tag }}
-  <script src="../assets/carousel.js"></script>
+  <script src="../assets/header.js"></script>
+  <script>
+    function classToggle() {
+      this.classList.toggle('is-clicked');
+      this.classList.toggle('');
+    }
+    document.querySelector('#nav--toggle').addEventListener('click', classToggle);
+  </script>
+  <script>
+    function classToggleFav() {
+      this.classList.toggle('solid');
+      this.classList.toggle('');
+    }
+    document.querySelector('.icon--fav').addEventListener('click', classToggleFav);
+  </script>
 </body>
 
 </html>
