--- a/sass/style-carousel.scss
+++ b/sass/style-carousel.scss
@@ -32,7 +32,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-family: $work-sans-regular;
+        font-family: $work-sans;
         font-size: 16px;
         font-weight: 300;
         text-transform: uppercase;
@@ -46,6 +46,7 @@
         a {
             text-decoration: none;
             position: relative;
+            color: $black;
 
             &::after {
                 content: '';
@@ -128,7 +129,7 @@
     justify-content: center;
 
     span {
-        font-family: $work-sans-regular;
+        font-family: $work-sans;
         position: relative;
         font-size: 22px;
         font-weight: 300;
