--- a/sass/style-footer.scss
+++ b/sass/style-footer.scss
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     background-color: $yellow;
-    font-family: $work-sans-regular;
+    font-family: $work-sans;
     color: $black;
     padding: 0 100px;
 
@@ -54,6 +54,12 @@
                 line-height: 60px;
             }
 
+            @include breakpoint(sm) {
+                flex-direction: column;
+                margin-bottom: 60px;
+                line-height: 60px;
+            }
+
             @include breakpoint(md) {
                 flex-wrap: wrap;
                 line-height: 60px;
@@ -63,6 +69,10 @@
                 margin: 0 60px 0 0;
                 font-size: 16px;
                 text-transform: uppercase;
+
+                @include breakpoint(md) {
+                    margin-right: 30px;
+                }
             }
         }
     }
@@ -70,6 +80,8 @@
     .footer--newsletter {
         display: flex;
         flex-direction: column;
+        width: 100%;
+        max-width: 500px;
 
         .newsletter--msg {
             font-size: 16px;
