--- a/sass/style-header.scss
+++ b/sass/style-header.scss
@@ -1,32 +1,698 @@
-
-#header {
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.sticky {
+.header {
+    background-color: $white;
+    padding: 40px 30px 30px;
     position: fixed;
-    top: 0;
     width: 100%;
+    z-index: 1000;
+    transition: all ease-in 0.2s;
+
+    @include breakpoint(xs) {
+        padding: 15px 30px;
+
+        .logo img {
+            width: 175px;
+            transition: all ease-in 0.2s;
+        }
+
+        .input--search {
+            display: none;
+        }
+
+        .top--nav--account-links {
+            display: none;
+        }
+    }
+
+    @include breakpoint(sm) {
+        padding: 15px 30px;
+
+        .logo img {
+            width: 175px;
+            transition: all ease-in 0.2s;
+        }
+
+        .input--search {
+            display: none;
+        }
+
+        .top--nav--account-links {
+            display: none;
+        }
+    }
+
+    @include breakpoint(md) {
+        padding: 15px 30px;
+
+        .logo img {
+            width: 175px;
+            transition: all ease-in 0.2s;
+        }
+
+        .input--search {
+            display: none;
+        }
+
+        .top--nav--account-links {
+            display: none;
+        }
+    }
+
+    &.shrink {
+        padding: 15px 30px;
+        transition: all ease-in 0.2s;
+
+        .logo img {
+            width: 175px;
+            transition: all ease-in 0.2s;
+        }
+
+        .input--search {
+            display: none;
+        }
+
+        .top--nav--account-links {
+            display: none;
+        }
+
+        &:hover {
+            padding: 40px 30px 30px;
+            transition: all ease-in 0.2s;
+
+            @include breakpoint(xs) {
+                padding: 15px 30px;
+            }
+
+            @include breakpoint(sm) {
+                padding: 15px 30px;
+            }
+
+            @include breakpoint(md) {
+                padding: 15px 30px;
+            }
+
+            .logo img {
+                // max-width: 500px;
+                width: 100%;
+                transition: all ease-in 0.2s;
+
+                @include breakpoint(xs) {
+                    width: 175px;
+                    transition: all ease-in 0.2s;
+                }
+
+                @include breakpoint(sm) {
+                    width: 175px;
+                    transition: all ease-in 0.2s;
+                }
+
+                @include breakpoint(md) {
+                    width: 175px;
+                    transition: all ease-in 0.2s;
+                }
+            }
+
+            .input--search {
+                display: block;
+
+                @include breakpoint(xs) {
+                    display: none;
+                }
+
+                @include breakpoint(sm) {
+                    display: none;
+                }
+
+                @include breakpoint(md) {
+                    display: none;
+                }
+            }
+
+            .top--nav--account-links {
+                display: block;
+
+                a {
+                    color: $black;
+                }
+
+                @include breakpoint(xs) {
+                    display: none;
+                }
+
+                @include breakpoint(sm) {
+                    display: none;
+                }
+
+                @include breakpoint(md) {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    &--top {
+        display: flex;
+        align-items: center;
+
+        &--item {
+            flex-grow: 1;
+            width: 100%;
+
+            ul {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+            }
+
+            li {
+                margin-left: 20px;
+                font-size: 12px;
+
+                img {
+                    width: 20px;
+                }
+            }
+
+            .input--search {
+                background-color: $white;
+                height: 30px;
+                line-height: 30px;
+                border-bottom: 1px solid $black;
+                padding: 0 10px 0 30px;
+                overflow: hidden;
+                position: relative;
+                max-width: 214px;
+                width: 100%;
+
+                &::after {
+                    content: "";
+                    background-image: url(../assets/icon-search.svg);
+                    background-repeat: no-repeat;
+                    width: 23px;
+                    height: 24px;
+                    position: absolute;
+                    left: 0;
+                }
+
+                input[type="text"] {
+                    border: none;
+                    background-color: transparent;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 30px;
+                    width: 100%;
+                    outline: none;
+                }
+            }
+
+            .logo {
+                display: flex;
+                justify-content: center;
+
+                img {
+                    display: inline-block;
+                    max-width: 500px;
+                    width: 100%;
+                    transition: all ease-in 0.2s;
+
+                    @include breakpoint(xs) {
+                        max-width: 175px;
+                    }
+
+                    @include breakpoint(sm) {
+                        max-width: 175px;
+                    }
+
+                    @include breakpoint(md) {
+                        max-width: 175px;
+                    }
+                }
+            }
+        }
+    }
 }
 
-.header--top {
-    display: flex;
-    justify-content: space-between;
+.menu {
+    text-transform: uppercase;
+    width: 100%;
+
+    &--container {
+        max-width: 80%;
+        margin: 30px auto 0;
+
+        @include breakpoint(xs) {
+            margin: 0;
+        }
+
+        @include breakpoint(sm) {
+            margin: 0;
+        }
+
+        @include breakpoint(md) {
+            margin: 0;
+        }
+    }
+
+    &--list {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+
+        &--item {
+
+            a {
+                color: $black;
+            }
+
+            @include breakpoint(xs) {
+                line-height: 40px;
+            }
+
+            @include breakpoint(sm) {
+                line-height: 40px;
+            }
+
+            @include breakpoint(md) {
+                line-height: 40px;
+            }
+
+            &-dropdown {
+                position: relative;
+
+                .menu--sub {
+                    display: none;
+
+                    @include breakpoint(xs) {
+                        display: block;
+                        width: 100%;
+
+                        .menu--sub--list {
+                            flex-direction: column;
+                            flex-wrap: nowrap !important;
+                            padding: 0 !important;
+
+                            &--item {
+                                width: 100%;
+                                padding-left: 30px;
+
+                                &::before {
+                                    content: " - ";
+                                    display: block;
+                                    position: absolute;
+                                    color: $black;
+                                    left: 0;
+                                    line-height: 40px;
+                                }
+                            }
+                        }
+                    }
+
+                    @include breakpoint(sm) {
+                        display: block;
+                        width: 100%;
+
+                        .menu--sub--list {
+                            flex-direction: column;
+                            flex-wrap: nowrap !important;
+                            padding: 0 !important;
+
+                            &--item {
+                                width: 100%;
+                                padding-left: 30px;
+
+                                &::before {
+                                    content: " - ";
+                                    display: block;
+                                    position: absolute;
+                                    color: $black;
+                                    left: 0;
+                                    line-height: 40px;
+                                }
+                            }
+                        }
+                    }
+
+                    @include breakpoint(md) {
+                        display: block;
+                        width: 100%;
+
+                        .menu--sub--list {
+                            flex-direction: column;
+                            flex-wrap: nowrap !important;
+                            padding: 0 !important;
+
+                            &--item {
+                                width: 100%;
+                                padding-left: 30px;
+
+                                &::before {
+                                    content: " - ";
+                                    display: block;
+                                    position: absolute;
+                                    color: $black;
+                                    left: 0;
+                                    line-height: 40px;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                &:hover {
+                    .menu--sub {
+                        display: block;
+                        position: absolute;
+                        width: 500px;
+
+                        @include breakpoint(xs) {
+                            position: relative;
+                            width: 100%;
+                        }
+
+                        @include breakpoint(sm) {
+                            position: relative;
+                            width: 100%;
+                        }
+
+                        @include breakpoint(md) {
+                            position: relative;
+                            width: 100%;
+                        }
+
+                        &--list {
+                            display: flex;
+                            flex-wrap: wrap;
+                            background-color: $white;
+                            padding: 40px 50px;
+                            position: relative;
+                            line-height: 40px;
+
+                            &--item {
+                                width: 50%;
+                                position: relative;
+
+                                a {
+                                    position: relative;
+
+                                    &:hover::after {
+                                        content: "";
+                                        position: absolute;
+                                        left: 0;
+                                        bottom: -10px;
+                                        width: 100%;
+                                        height: 5px;
+                                        background-color: $yellow;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
-.header--top--item {
-    display: inline-flex;
-    flex-grow: 1;
-}
+// toggle menu styles
 
-.menu--list {
-    list-style: none;
-    display: inline-flex;
-}
+.menu--toggle {
+    .nav--burger {
+        display: none;
+    }
+    .menu--container {
+        @include breakpoint(xs) {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            padding: 70px 30px 50px;
+            height: 100%;
+            background-color: $white;
+            display: flex;
+            flex-direction: column;
+            transition: all ease-in-out 0.4s;
 
-.menu--list--item {
-    margin: 0 10px;
-    font-family: $work-sans-regular;
+            .menu--list {
+                flex-direction: column;
+            }
+        }
+
+        @include breakpoint(sm) {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            padding: 100px 30px 50px;
+            height: 100%;
+            background-color: $white;
+            display: flex;
+            flex-direction: column;
+            transition: all ease-in-out 0.4s;
+
+            .menu--list {
+                flex-direction: column;
+            }
+        }
+
+        @include breakpoint(md) {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            padding: 100px 30px 50px;
+            height: 100%;
+            background-color: $white;
+            display: flex;
+            flex-direction: column;
+            transition: all ease-in-out 0.4s;
+
+            .menu--list {
+                flex-direction: column;
+            }
+        }
+    }
+
+    &.is-clicked {
+        .menu--container {
+            left: 0;
+            transition: all ease-in-out 0.4s;
+        }
+
+        .nav--burger::after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            border-radius: 100%;
+            left: -29%;
+            top: -33%;
+            transition: all 0.5s;
+        }
+
+        .nav--burger .icon-bar {
+            background: $black;
+            position: relative;
+            z-index: 1;
+        }
+
+        .nav--burger .top-bar {
+            transform: rotate(45deg);
+            transform-origin: 10% 10%;
+            width: 22px;
+        }
+
+        .nav--burger .middle-bar {
+            opacity: 0;
+        }
+
+        .nav--burger .bottom-bar {
+            transform: rotate(-45deg);
+            transform-origin: 10% 90%;
+            width: 22px;
+        }
+    }
+
+    .nav--burger {
+        display: none;
+
+        @include breakpoint(xs) {
+            position: fixed;
+            top: 18px;
+            left: 18px;
+            z-index: 10;
+            display: block;
+            width: 30px;
+
+            &::before {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 40px;
+                height: 40px;
+                border-radius: 100%;
+                left: -9px;
+                top: -8px;
+                transition: all 0.5s;
+            }
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 0;
+                height: 0;
+                left: 32%;
+                top: 44%;
+                border-radius: 100%;
+                transition: all 0.5s;
+            }
+
+            .icon-bar {
+                background: $black;
+                width: 16px;
+                height: 1px;
+                display: block;
+                transition: all 0.2s;
+                margin: 5px 3px;
+                transition: all 0.5s;
+            }
+
+            .top-bar {
+                transform: rotate(0);
+                transform-origin: 10% 10%;
+            }
+
+            .middle-bar {
+                opacity: 1;
+                width: 16px;
+                position: relative;
+            }
+
+            .bottom-bar {
+                transform: rotate(0);
+                transform-origin: 10% 90%;
+            }
+        }
+
+        @include breakpoint(sm) {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 10;
+            display: block;
+            width: 30px;
+
+            &::before {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 40px;
+                height: 40px;
+                border-radius: 100%;
+                left: -9px;
+                top: -8px;
+                transition: all 0.5s;
+            }
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 0;
+                height: 0;
+                left: 32%;
+                top: 44%;
+                border-radius: 100%;
+                transition: all 0.5s;
+            }
+
+            .icon-bar {
+                background: $black;
+                width: 16px;
+                height: 1px;
+                display: block;
+                transition: all 0.2s;
+                margin: 5px 3px;
+                transition: all 0.5s;
+            }
+
+            .top-bar {
+                transform: rotate(0);
+                transform-origin: 10% 10%;
+            }
+
+            .middle-bar {
+                opacity: 1;
+                width: 16px;
+                position: relative;
+            }
+
+            .bottom-bar {
+                transform: rotate(0);
+                transform-origin: 10% 90%;
+            }
+        }
+
+        @include breakpoint(md) {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 10;
+            display: block;
+            width: 30px;
+
+            &::before {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 40px;
+                height: 40px;
+                border-radius: 100%;
+                left: -9px;
+                top: -8px;
+                transition: all 0.5s;
+            }
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 0;
+                height: 0;
+                left: 32%;
+                top: 44%;
+                border-radius: 100%;
+                transition: all 0.5s;
+            }
+
+            .icon-bar {
+                background: $black;
+                width: 16px;
+                height: 1px;
+                display: block;
+                transition: all 0.2s;
+                margin: 5px 3px;
+                transition: all 0.5s;
+            }
+
+            .top-bar {
+                transform: rotate(0);
+                transform-origin: 10% 10%;
+            }
+
+            .middle-bar {
+                opacity: 1;
+                width: 16px;
+                position: relative;
+            }
+
+            .bottom-bar {
+                transform: rotate(0);
+                transform-origin: 10% 90%;
+            }
+        }
+    }
 }
