--- a/snippets/menu.liquid
+++ b/snippets/menu.liquid
@@ -1,33 +1,37 @@
 <section class="menu">
-    <div class="menu--container">
-        <ul class="menu--list">
-            {% for link in linklists[section.settings.main_linklist].links %}
-            {% if link.links == blank %}
-            <li class="menu--list--item">
-                <a href="{{link.url}}">{{link.title}}</a>
-            </li>
-            {% endif %}
+    <div id="nav--toggle" class="menu--toggle">
+        <div class="nav--burger">
+            <span class="icon-bar top-bar"></span>
+            <span class="icon-bar middle-bar"></span>
+            <span class="icon-bar bottom-bar"></span>
+        </div>
+        <div class="menu--container">
+            <ul class="menu--list">
+                {% for link in linklists[section.settings.main_linklist].links %}
+                {% if link.links == blank %}
+                <li class="menu--list--item">
+                    <a href="{{link.url}}">{{link.title}}</a>
+                </li>
+                {% endif %}
 
-            {% if link.links != blank %}
-            <li class="menu--list--item  menu--list--item-dropdown>
-                <a href="#">
-                    Shop by brand
-                </a>
-                <div>
-                    <div>
-                        {% for childlink in link.links  %}
-                        <div>
-                            <div>{{childlink.title}}</div>
-                            {% for sublink in childlink.links %}
-                            <a href="{{sublink.url}}">{{sublink.title}}</a>
+                {% if link.links != blank %}
+                <li class="menu--list--item  menu--list--item-dropdown">
+                    <a href="#">
+                        Shop by brand
+                    </a>
+                    <div class="menu--sub">
+                        <ul class="menu--sub--list">
+                            {% for childlink in link.links  %}
+                            <li class="menu--sub--list--item">
+                                <a href="{{sublink.url}}">{{childlink.title}}</a>
+                            </li>
                             {% endfor %}
-                        </div>
-                        {% endfor %}
+                        </ul>
                     </div>
-                </div>
-            </li>
-            {% endif %}
-            {% endfor %}
-        </ul>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </section>
